@@ -6,7 +6,7 @@
  * https://www.eclipse.org/legal/epl-2.0/
  *
  * SPDX-License-Identifier: EPL-2.0
- * 
+ *
  * Contributors:
  *     David Carver - initial API and implementation
  *     Jesper Steen Moller - bug 283404 - added locale sensitivity test
@@ -28,28 +28,28 @@ public class XPathDecimalFormatTest extends TestCase {
 
 	public void testDoublePositiveInfinity() {
 		XPathDecimalFormat format = new XPathDecimalFormat(DOUBLE_FORMAT);
-		Double value = new Double(Double.POSITIVE_INFINITY);
+		Double value = Double.valueOf(Double.POSITIVE_INFINITY);
 		String result = format.xpathFormat(value);
 		assertEquals("Unexpected XPath format String:", "INF", result);
 	}
-	
+
 	public void testDoubleNegativeInfinity() {
 		XPathDecimalFormat format = new XPathDecimalFormat(DOUBLE_FORMAT);
-		Double value = new Double(Double.NEGATIVE_INFINITY);
+		Double value = Double.valueOf(Double.NEGATIVE_INFINITY);
 		String result = format.xpathFormat(value);
 		assertEquals("Unexpected XPath format string:", "-INF", result);
 	}
-	
+
 	public void testFloatPositiveInfinity() {
 		XPathDecimalFormat format = new XPathDecimalFormat(FLOAT_FORMAT);
-		Float value = new Float(Float.POSITIVE_INFINITY);
+		Float value = Float.valueOf(Float.POSITIVE_INFINITY);
 		String result = format.xpathFormat(value);
 		assertEquals("Unexpected XPath format string:", "INF", result);
 	}
-	
+
 	public void testFloatNegativeInfinity() {
 		XPathDecimalFormat format = new XPathDecimalFormat(FLOAT_FORMAT);
-		Float value = new Float(Float.NEGATIVE_INFINITY);
+		Float value = Float.valueOf(Float.NEGATIVE_INFINITY);
 		String result = format.xpathFormat(value);
 		assertEquals("Unexpected XPath format string:", "-INF", result);
 	}
